--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  annb-lab
 name: "Alex N Nguyen Ba"
 
 # Build settings
-remote_theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.19.2"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
