--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ email: test@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is the website for Alex N. Nguyen Ba's lab.
 url: https://annb-lab.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: alex_nguyen_ba
+github_username:  annb-lab
 name: "Alex N Nguyen Ba"
 
 # Build settings
