--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ masthead_title: annb.lab
 title_separator: "-"
 email: test@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the website for Alex N. Nguyen Ba's lab.
+  Alex N. Nguyen Ba's lab website.
 url: https://annb-lab.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alex_nguyen_ba
 github_username:  annb-lab
