--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ remote_theme: "mmistakes/minimal-mistakes@4.19.2"
 plugins:
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-sitemap
 
 include:
   - _pages
